--- a/1. Letitsnow.ipynb
+++ b/1. Letitsnow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "[2521 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "[2520 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "[2520 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[2520 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,6 +705,15 @@
     "df[\"Date\"]= new_col\n",
     "df = df.drop([\"År\", \"Period\"], axis=1)\n",
     "df.sort_values(by=\"Date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"crime_cleaned.csv\")"
    ]
   },
   {
