--- a/2. Join weather regions.ipynb
+++ b/2. Join weather regions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "locations = weather_new[\"location\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Samma\n",
+    "set(name_region[\"Name\"]) - set(locations)"
    ]
   },
   {
@@ -62,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "set()"
+       "484"
       ]
      },
      "execution_count": 7,
@@ -71,8 +92,7 @@
     }
    ],
    "source": [
-    "#Samma\n",
-    "set(name_region[\"Name\"]) - set(locations)"
+    "len(name_region[\"Name\"])"
    ]
   },
   {
@@ -92,32 +112,12 @@
     }
    ],
    "source": [
-    "len(name_region[\"Name\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "484"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "len(set(locations))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[2044549 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
     "    for region in df[\"location\"]:\n",
     "        count = count +1\n",
     "        try:\n",
-    "            new_value = name_regions[name_regions[\"Name\"]==region][\"County\"][0]\n",
+    "            new_value = list(name_regions[name_regions[\"Name\"]==region][\"County\"])[0]\n",
     "            new_col.append(new_value)\n",
     "        except KeyError:\n",
     "            new_col.append(\"Error\")\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weather_regions.to_excel(\"weather_regions.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_regions.to_csv(\"weather_regions_new.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -385,35 +424,35 @@
        "      <td>Övre Soppero</td>\n",
        "      <td>2021-08-28</td>\n",
        "      <td>0</td>\n",
-       "      <td>Error</td>\n",
+       "      <td>Norrbottens län</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3145129</th>\n",
        "      <td>Övre Soppero</td>\n",
        "      <td>2021-08-29</td>\n",
        "      <td>0</td>\n",
-       "      <td>Error</td>\n",
+       "      <td>Norrbottens län</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3145130</th>\n",
        "      <td>Övre Soppero</td>\n",
        "      <td>2021-08-30</td>\n",
        "      <td>0</td>\n",
-       "      <td>Error</td>\n",
+       "      <td>Norrbottens län</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3145131</th>\n",
        "      <td>Övre Soppero</td>\n",
        "      <td>2021-08-31</td>\n",
        "      <td>0</td>\n",
-       "      <td>Error</td>\n",
+       "      <td>Norrbottens län</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3145132</th>\n",
        "      <td>Övre Soppero</td>\n",
        "      <td>2021-09-01</td>\n",
        "      <td>0</td>\n",
-       "      <td>Error</td>\n",
+       "      <td>Norrbottens län</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -428,54 +467,22 @@
        "8381           Abisko  1995-01-04          17  Norrbottens län\n",
        "8382           Abisko  1995-01-05          17  Norrbottens län\n",
        "...               ...         ...         ...              ...\n",
-       "3145128  Övre Soppero  2021-08-28           0            Error\n",
-       "3145129  Övre Soppero  2021-08-29           0            Error\n",
-       "3145130  Övre Soppero  2021-08-30           0            Error\n",
-       "3145131  Övre Soppero  2021-08-31           0            Error\n",
-       "3145132  Övre Soppero  2021-09-01           0            Error\n",
+       "3145128  Övre Soppero  2021-08-28           0  Norrbottens län\n",
+       "3145129  Övre Soppero  2021-08-29           0  Norrbottens län\n",
+       "3145130  Övre Soppero  2021-08-30           0  Norrbottens län\n",
+       "3145131  Övre Soppero  2021-08-31           0  Norrbottens län\n",
+       "3145132  Övre Soppero  2021-09-01           0  Norrbottens län\n",
        "\n",
        "[2044549 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "weather_regions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "This sheet is too large! Your sheet size is: 2044549, 4 Max sheet size is: 1048576, 16384",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-e6eda2abaa57>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mweather_regions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"weather_regions.xlsx\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\tensorflow_env\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_excel\u001b[1;34m(self, excel_writer, sheet_name, na_rep, float_format, columns, header, index, index_label, startrow, startcol, engine, merge_cells, encoding, inf_rep, verbose, freeze_panes)\u001b[0m\n\u001b[0;32m   2179\u001b[0m             \u001b[0mstartcol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstartcol\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2180\u001b[0m             \u001b[0mfreeze_panes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfreeze_panes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2181\u001b[1;33m             \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2182\u001b[0m         )\n\u001b[0;32m   2183\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\tensorflow_env\\lib\\site-packages\\pandas\\io\\formats\\excel.py\u001b[0m in \u001b[0;36mwrite\u001b[1;34m(self, writer, sheet_name, startrow, startcol, freeze_panes, engine)\u001b[0m\n\u001b[0;32m    717\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnum_rows\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_rows\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mnum_cols\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_cols\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    718\u001b[0m             raise ValueError(\n\u001b[1;32m--> 719\u001b[1;33m                 \u001b[1;34mf\"This sheet is too large! Your sheet size is: {num_rows}, {num_cols} \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    720\u001b[0m                 \u001b[1;34mf\"Max sheet size is: {self.max_rows}, {self.max_cols}\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    721\u001b[0m             )\n",
-      "\u001b[1;31mValueError\u001b[0m: This sheet is too large! Your sheet size is: 2044549, 4 Max sheet size is: 1048576, 16384"
-     ]
-    }
-   ],
-   "source": [
-    "#weather_regions.to_excel(\"weather_regions.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weather_regions.to_csv(\"weather_regions.csv\")"
    ]
   },
   {
@@ -488,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
